heap dump analysis - performance improvement part 2 - optimising indicator data